GeyserFloatingPoint support